# superset-docs

./: .gitignore  Jenkinsfile  README.md  verify_examples.py
.github/workflows/: perf.yml
.trae/rules/: project_rules.md
e2e/: .gitignore  COVERAGE.md  README.md  conftest.py  debug_login.py  probe_p3.py  pyproject.toml  requirements.txt  run.py
e2e/.trae/: rules.md
e2e/config/: README.md  config.prod.yaml  config.sit.yaml  config.uat.yaml  config.yaml  settings.py
e2e/docs/: ARCHITECTURE.md  GETTING_STARTED.md  MFE_COMPLETE_DOC copy.md  MFE_IMPLEMENTATION.md  MFE_MULTI_TAB.md  OFFLINE_EXAMPLES.md  QUICKSTART.md  REPORTS.md  SCHEMA_MIGRATION_GUIDE.md
e2e/fixtures/: README.md  allure_config.py  conftest.py  playwright_fixtures.py
e2e/pages/: README.md  dashboard_page.py  explore_page.py  login_page.py  sqllab_page.py
e2e/perf/: CHANGELOG.md  PLAN.md  README.md  __init__.py  requirements.txt
e2e/perf/baselines/: README.md  v4_1.json  v6_0.json
e2e/perf/common/: __init__.py  auth.py  config_loader.py  docker_stats.py  metrics.py  report.py  thresholds.py
e2e/perf/docs/: JENKINS.md  MULTI_ENV_USER.md
e2e/perf/k6/: __init__.py
e2e/perf/k6/scripts/: __init__.py  chart_data.js  chart_list.js  dashboard_detail.js  dashboard_list.js  dashboard_render.js  endurance.js  explore_stress.js  lib.js  login_storm.js  smoke.js
e2e/perf/locust/: __init__.py  locustfile.py
e2e/perf/locust/tasks/: __init__.py  admin_ops.py  analyst.py  base.py  embed.py  login_storm.py  viewer.py
e2e/perf/reports/: README.md  SUMMARY.md
e2e/perf/reports/locust/: current_6.0.json  report_6.0.html  run_6.0_stats.csv  run_6.0_stats_history.csv  summary_6.0.txt
e2e/perf/tests/: __init__.py  test_baseline_schema.py  test_config.py  test_thresholds.py
e2e/perf/tools/: __init__.py  collect_docker_stats.py  compare_baseline.py  run_k6.sh  run_locust.sh  save_baseline.py  wait_healthy.py
e2e/reports/allure-results/: categories.json  environment.properties
e2e/spec/: README.md  alert.feature  annotation.feature  auth.feature  chart.feature  chart_data.feature  css_template.feature  dashboard.feature  database.feature  dataset.feature  db_introspection.feature  embed.feature  explore.feature  filter.feature  import_export.feature  misc.feature  rbac.feature  rls.feature  saved_query.feature  sqllab.feature  tag.feature  viz_matrix.feature
e2e/tests/: README.md  conftest.py
e2e/tests/auth/: README.md  test_auth.py
e2e/tests/charts/: README.md  test_chart_crud.py  test_charts.py  test_explore.py  test_viz_matrix.py
e2e/tests/dashboards/: README.md  test_dashboard_crud.py  test_dashboard_filters.py  test_dashboards.py
e2e/tests/databases/: README.md  test_database_crud.py  test_databases.py  test_dataset_crud.py
e2e/tests/extras/: test_p4_extras.py
e2e/tests/health/: README.md  test_health.py
e2e/tests/import_export_alerts/: test_import_export.py
e2e/tests/multi_user/: test_multi_user_e2e.py
e2e/tests/settings/: test_rbac_embed_settings.py
e2e/tests/sqllab/: README.md  test_sqllab.py  test_sqllab_advanced.py
e2e/utils/: README.md  api.py  bdd.py  logging.py  page_actions.py  process.py  service.py  stability.py  user_pool.py
example-data/: README.md  birth_names.csv  long_lat.csv
superset-4.1/: README.md  docker-compose.yml  superset_config.py
superset-4.1/pythonpath/: load_examples_init.py
superset-6.0/: README.md  docker-compose.yml  superset_config.py
(+4 files in other folders)
