[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superset-e2e"
version = "0.1.0"
description = "Superset 4.1 / 6.0 E2E automated tests"
requires-python = ">=3.10"
dependencies = [
    "pytest==8.3.3",
    "pytest-rerunfailures==14.0",
    "pytest-xdist==3.6.1",
    "pytest-timeout==2.3.1",
    "allure-pytest==2.13.5",
    "playwright==1.48.0",
    "httpx==0.27.2",
    "pyyaml==6.0.2",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "tenacity==9.0.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--alluredir=../reports/allure-results",
    "--reruns=2",
    "--reruns-delay=3",
    "--timeout=120",
]
markers = [
    "smoke: 冒烟测试，每个版本必跑",
    "auth: 认证相关",
    "dashboard: 仪表盘测试",
    "chart: 图表测试",
    "sqllab: SQL Lab 测试",
    "database: 数据库相关",
    "health: 健康检查",
    "slow: 耗时较长的测试",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 100
target-version = "py310"
